--- a/about1.html
+++ b/about1.html
@@ -181,6 +181,9 @@
             </div>
         </section>
 
+        
+
+   
         <!--  approach part 4 -->
         <section class="approach-part5 margin-top-section mb-5 ">
             <div class="approach-part5-banner">
@@ -200,6 +203,7 @@
             </div>
         </section>
         <!--  -->
+      
         <section class="approach-part6 margin-top-section mb-5 ">
             <div class="approach-part6-banner">
                 <div class="approach-part6-bg-color">
@@ -217,6 +221,9 @@
                 </div>
             </div>
         </section>
+
+
+
 
 
 
@@ -247,6 +254,56 @@
 
         </section>
 
+
+        <section id="section-event">
+            <div class="bg-color">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="event-header">
+
+                                <h1>Up Coming events</h1>
+                                <h3>Decorations 100% complete here</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+
+                        <div class="row no-gutters">
+                            <div class="col-md-4 col-12">
+                                <div class="event-left-image">
+                                    <img sizes="(max-width: 988px) 100vw, 988px" srcset="
+                                                IMAGES/8_z7fahm_c_scale,w_988.jpg 988vw"
+                                        src="IMAGES/8_z7fahm_c_scale,w_597.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-md-8 col-12">
+
+                                <div class="event-content-holder">
+                                    <h2>Joyful party</h2>
+                                    <p>Lor msms sdae, quae iure adipisci, inventore quia, quos delectus quaerat
+                                        praesentium id expedita nihil illo accusantium, tempora.</p>
+                                    <address>
+                                        <strong>Place: </strong>
+                                        1612 Collins Str, Victoria 8007
+                                        <br>
+                                        <strong>Time: </strong>
+                                        07:30pm
+                                    </address>
+
+                                    <button class="btn part-all-button btn-hover">see more
+
+
+
+                                    </button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="team-style1">
             <div class="container">
