--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <!--<link href="indexcss11.css" rel="stylesheet" />-->
-    <link href="css/about-css.css" rel="stylesheet" />
+    <!-- <link href="css/about-css.css" rel="stylesheet" />
 
-    <link href="css/aboutus.css" rel="stylesheet" />
+     <link href="css/aboutus.css" rel="stylesheet" />
     <link href="css/companies-css.css" rel="stylesheet" />
     <link href="css/formval_jquery.css" rel="stylesheet" />
-    <link href="css/index-style.css" rel="stylesheet" />
-    <link href="css/indexcss.css" rel="stylesheet" />
+    <link href="css/index-style.css" rel="stylesheet" /> 
+    <link href="css/indexcss.css" rel="stylesheet" /> 
     <link href="css/teamcss.css" rel="stylesheet" />
+-->
+    <link href="css/teamcss.1.css" rel="stylesheet" />
     <link href="css/navigation-barcss.css" rel="stylesheet" />
-    <!-- <link href="navigation-barcss.1.css" rel="stylesheet" /> -->
     <link href="css/media.css" rel="stylesheet" />
 
 </head>
@@ -380,7 +380,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 text-center">
-                        <h1 class="text-center">Our Service</h1>
+                        <h1 class="text-center">Our Service lorm lorem4 moo</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                             ullamco laboris cillum.</p>
@@ -394,7 +394,7 @@
                                 <i class="fa fa-stethoscope"></i>
                             </div>
                             <div class="icon-info">
-                                <h3>24 Hour Support</h3>
+                                <h4>24 Hour Support</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -406,7 +406,7 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="icon-info">
-                                <h3>Emergency Services</h3>
+                                <h4>Emergency Services</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -418,7 +418,7 @@
                                 <i class="fa fa-user-md"></i>
                             </div>
                             <div class="icon-info">
-                                <h3>Medical Counseling</h3>
+                                <h4>Medical Counseling</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -431,7 +431,7 @@
                                 <i class="fa fa-medkit"></i>
                             </div>
                             <div class="icon-info">
-                                <h3 class="text-center">Premium Healthcare</h3>
+                                <h4 class="text-center">Premium Healthcare</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -443,7 +443,7 @@
                                 <i class="fa fa-book"></i>
                             </div>
                             <div class="icon-info">
-                                <h3 class="text-center">Premium Healthcare</h3>
+                                <h4 class="text-center">Premium Healthcare</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -456,7 +456,7 @@
                                 <i class="fa fa-hand-rock-o"></i>
                             </div>
                             <div class="icon-info">
-                                <h3 class="text-center">Medical Counseling</h3>
+                                <h4 class="text-center">Medical Counseling</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -466,57 +466,6 @@
             </div>
         </section>
 
-
-
-        <section id="event">
-            <div class="bg-color">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="event-header">
-
-                                <h1>Up Coming events</h1>
-                                <h3>Decorations 100% complete here</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-
-                        <div class="row no-gutters">
-                            <div class="col-md-4 col-12">
-                                <div class="event-left-image">
-                                    <img sizes="(max-width: 988px) 100vw, 988px" srcset="
-                                                IMAGES/8_z7fahm_c_scale,w_988.jpg 988vw"
-                                        src="IMAGES/8_z7fahm_c_scale,w_597.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-8 col-12">
-
-                                <div class="event-content-holder">
-                                    <h2>Joyful party</h2>
-                                    <p>Lor msms sdae, quae iure adipisci, inventore quia, quos delectus quaerat
-                                        praesentium id expedita nihil illo accusantium, tempora.</p>
-                                    <address>
-                                        <strong>Place: </strong>
-                                        1612 Collins Str, Victoria 8007
-                                        <br>
-                                        <strong>Time: </strong>
-                                        07:30pm
-                                    </address>
-
-                                    <button class="btn part-all-button btn-hover">see more
-
-
-
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <!-- ******************** -->
 
@@ -614,87 +563,9 @@
         </div>
         </section>
 
-        <div>
-            <div>one
-                <div>
-                    two
-                </div>
-            </div>
-            <div>one</div>
-        </div>
-        <!-- ////////////// -->
-        <div class="team" id="team">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 team-header">
-                        <h2 class="pt-3 pb-3"> Our Team </h2>
-                        <p> Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-                    </div>
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-6 col-lg-3 col-md-3">
-                        <div class="team-content wow fadeInLeft" data-wow-delay="2s">
-                            <img src="IMAGES/1.jpg" alt="img1" class="rounded-circle">
-                            <h4> Bushra</h4>
-                            <b> MD</b>
-                            <p>ot simply random text.not simply random text. not simply random text.not simply random
-                                text.</p>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 col-md-3">
-                        <div class="team-content wow fadeInLeft" data-wow-delay="2s">
-                            <img src="IMAGES/2.jpg" alt="img1" class="rounded-circle">
-                            <h4> Qadeer</h4>
-                            <b> Director</b>
-                            <p>ot simply random text.not simply random text. not simply random text.not simply random
-                                text.</p>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="col-6 col-lg-3 col-md-3">
-                        <div class="team-content wow fadeInLeft" data-wow-delay="2s">
-                            <img src="IMAGES/7.jpg" alt="img1" class="rounded-circle">
-                            <h4> Zaffar</h4>
-                            <b> Chief executive</b>
-                            <p>ot simply random text.not simply random text. not simply random text.not simply random
-                                text.</p>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-3 col-md-3">
-                        <div class="team-content wow fadeInLeft" data-wow-delay="2s">
-
-                            <img src="IMAGES/4.jpg" alt="img1" class="rounded-circle">
-                            <h4> Hassan</h4>
-                            <b> Doctor</b>
-                            <p>ot simply random text.not simply random text. not simply random text.not simply random
-                                text.</p>
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
-    <div class="responsive-img">
-        <h1> hero</h1>
-
-    </div>
+    
     <div class="sidebar-top-wrapper">
         <div class="sidebar-toptopage scrollup1">
             <a href="#" class="scrollup"><i class="fa fa-arrow-circle-o-up"></i></a>
