--- a/team1.html
+++ b/team1.html
@@ -96,7 +96,7 @@
                         <p class="card-text more1-body"> This card has supporting text below</p>
                         <p class="card-text more1">
 
-                            <i class="fa fa-arrow-circle-o-right"></i><small class="text-muted">  see more</small>
+                            <i class="fa fa-arrow-circle-o-right"></i><small class="text-muted">  see moree</small>
                             <!--</a>-->
                             </p>
 
