--- a/category1.html
+++ b/category1.html
@@ -176,7 +176,7 @@
 
 
                                     <div class="team-part13-ajax-placeholder">
-                                        <a id="team-part13-ajax" href="about11.html ">learn more</a>
+                                        <a id="team-part13-ajax" href="./about11.html ">learn more</a>
                                     </div>
 
                                 </div>
