--- a/index.html
+++ b/index.html
@@ -12,21 +12,15 @@
 
     <!-- Bootstrap CSS -->
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
     <!-- Optional theme -->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <!-- <link href="css/about-css.css" rel="stylesheet" />
-
-     <link href="css/aboutus.css" rel="stylesheet" />
-    <link href="css/companies-css.css" rel="stylesheet" />
-    <link href="css/formval_jquery.css" rel="stylesheet" />
-    <link href="css/index-style.css" rel="stylesheet" /> 
-    <link href="css/indexcss.css" rel="stylesheet" /> 
-    <link href="css/teamcss.css" rel="stylesheet" />
--->
-    <link href="css/teamcss.1.css" rel="stylesheet" />
+   
+<link href="css/registration-form-style2.css" rel="stylesheet" />
+<!-- <link href="css/registration-form-style1.css" rel="stylesheet" /> -->
+    <link href="css/liquid-style.css" rel="stylesheet" />
     <link href="css/navigation-barcss.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
 
@@ -71,7 +65,6 @@
                         <div class="dropdown-divider"></div>
 
                         <a class="dropdown-item link6" href="#Registration">Ragistration</a>
-                        <div class="dropdown-divider"></div>
 
 
                     </div>
@@ -477,7 +470,7 @@
                         <div class="col-md-6 col-12">
                             <div class="feature-four-left">
                                 <div class="title-side-left">
-                                    <img class="img-left" src="IMAGES/Billene.png">
+                                    <img class="img-left" src="IMAGES/Billene.jpg">
                                     <div class="feature-text-left">
                                         <h3> Lorem sum.</h3>
                                         <h4>
@@ -791,7 +784,7 @@
                 $(window).scrollTop(0);
                 //output = "";
                 var xhttp6 = new XMLHttpRequest();
-                xhttp6.open("GET", "formval_jquery1.html", false);
+                xhttp6.open("GET", "registration.html", false);
                 xhttp6.onreadystatechange = function () {
                     if (this.readyState == 4 && this.status == 200) {
                         if (check6 == 1) {
