--- a/team1.html
+++ b/team1.html
@@ -37,7 +37,7 @@
                     <div class="col-lg-6">
                         <div class="intro-left-img">
 
-                            <img src="IMAGES/intro-tran.png" class="img-resonsive" />
+                            <img src="IMAGES/download.jpg" class="img-resonsive" />
                         </div>
                     </div>
                 </div>
