--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,6 @@
                 <div class="col-lg-4">
                 </div>
                 <div class=" col-md-offset-2 col-md-6 col-sm-6">
-                    <div>
                         <h3 class="text-center">Create New Account</h3>
                         <!--<div id="sendmessage">Your message has been sent. Thank you!</div>-->
                         <!--<div id="errormessage"></div>-->
@@ -59,7 +58,6 @@
 
                                 <!--<span id="re_password_message"> </span>-->
 
-                            </div>
 
                             <!--<div class="form-group">
                                 <label for="textarea_id">Message</label>
@@ -74,7 +72,7 @@
             </div>
         </div>
     </section>
-
+<!-- 
     <div id="social-media-place-holder">
 
     </div>
@@ -84,14 +82,14 @@
 
     <div id="footer-place-holder">
 
-    </div>
+    </div> -->
 
 
 
     <script src="Scripts/jquery-3.2.1.js"></script>
 
     <!--<script src="Scripts/jquery-3.2.1.slim.js"></script>-->
-    <script src="formval_jquery.js"></script>
+    <script src="js/registration-form.js"></script>
 
     <!--<script type="text/javascript">
         $(document).ready(function () {
