--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-   
+    <link href="content/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 <link href="css/registration-form-style2.css" rel="stylesheet" />
 <!-- <link href="css/registration-form-style1.css" rel="stylesheet" /> -->
     <link href="css/liquid-style.css" rel="stylesheet" />
@@ -369,7 +368,7 @@
         </section>
 
 
-        <section id="service" class="mt-5 marginbot-60">
+        <section id="service">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 text-center">
