--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title> liquid hub</title>
 
     <!-- Bootstrap CSS -->
-    <link href="content/bootstrap.min.css" rel="stylesheet" />
+    <link href="contents/bootstrap.min.css" rel="stylesheet" />
     <!-- Optional theme -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
-    <link href="content/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="contents/font-awesome/css/font-awesome.css" rel="stylesheet" />
 <link href="css/registration-form-style2.css" rel="stylesheet" />
 <!-- <link href="css/registration-form-style1.css" rel="stylesheet" /> -->
     <link href="css/liquid-style.css" rel="stylesheet" />
