--- a/jsonpage1.html
+++ b/jsonpage1.html
@@ -1,22 +1,21 @@
-﻿
-    <div style="height:100px;">
+﻿<div style="height:100px;">
 
-    </div>
-    <div class="container">
+</div>
+<div class="container">
 
-        <h1>
-            Fetch data from JSON object
+    <h1>
+        Fetch data from JSON object
 
-        </h1>
-        <button class="btn btn-outline-primary" id="jsondata">see more </button>
+    </h1>
+    <button class="btn btn-outline-primary" id="jsondata">see more </button>
 
-        <div id="JSON_LOCAL"></div>
+    <div id="JSON_LOCAL"></div>
 
 
-    </div>
-    <script src="Scripts/jquery-3.2.1.js"></script>
-<script src="ajaxjquery.js"></script>
-    <!--<script type="text/javascript">
+</div>
+<script src="Scripts/jquery-3.2.1.js"></script>
+<script src="js/ajaxjquery.js"></script>
+<!--<script type="text/javascript">
         $(document).ready(function () {
             $.get("footer.html", function (data) {
                 $("#footer-place-holder").replaceWith(data);
@@ -83,4 +82,4 @@
 
         });-->
 
-    <!--//</script>-->
+<!--//</script>-->
