--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a class="dropdown-item link5" href="#FAQ">FAQ</a>
                         <div class="dropdown-divider"></div>
 
-                        <a class="dropdown-item link6" href="#Registration">Ragistration</a>
+                        <a class="dropdown-item link6" href="#Registration">Registration</a>
 
 
                     </div>
@@ -139,7 +139,7 @@
                         <i class="up-arrow1 fa fa-angle-up fa-2x pull-right align-middle" aria-hidden="true"></i>
                     </a>
                     <ul id="submenu1" class="submenu">
-                        <li><a class="link1 slide-link" href="#about"> about us <i
+                        <li><a class="link1 slide-link" href="#about"> about us <i 0
                                     class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
                         <li><a class="link2 slide-link" href="#team"> team<i class="fa fa-chevron-right pull-right"
                                     aria-hidden="true"></i> </a></li>
