--- a/jsonpage1.html
+++ b/jsonpage1.html
@@ -5,11 +5,10 @@
 
     <h1>
         Fetch data from JSON object
-
     </h1>
-    <button class="btn btn-outline-primary" id="jsondata">see more </button>
 
     <div id="JSON_LOCAL"></div>
+    <button class="btn btn-primary" id="jsondata">see more </button>
 
 
 </div>
